force-app/main/default/objects/Lead/fields/Form_Submission_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_URL__c</fullName>
    <label>Form Submission URL</label>
    <type>Url</type>
</CustomField>