force-app/main/default/objects/Lead/fields/Lead_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Lead_Recipient__c</fullName>
    <label>Lead Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>