force-app/main/default/objects/Lead/fields/Web_Form_Comment__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Comment__c</fullName>
    <label>Web Form Comment</label>
    <type>TextArea</type>
</CustomField>